versioned_docs/version-3.15/scalardb-core-status-codes.mdx
---
tags:
  - Community
  - Enterprise Standard
  - Enterprise Premium
displayed_sidebar: docsEnglish
---

# ScalarDB Core Error Codes

This page provides a list of error codes in ScalarDB Core.

## Error code classes and descriptions

| Class           | Description                                              |
|:----------------|:---------------------------------------------------------|
| `DB-CORE-1xxxx` | Errors for the user error category                       |
| `DB-CORE-2xxxx` | Errors for the concurrency error category                |
| `DB-CORE-3xxxx` | Errors for the internal error category                   |
| `DB-CORE-4xxxx` | Errors for the unknown transaction status error category |

## `DB-CORE-1xxxx` status codes

The following are status codes and messages for the user error category.

### `DB-CORE-10000`

**Message**

```markdown
Only a single-column index is supported. Operation: %s
```

### `DB-CORE-10001`

**Message**

```markdown
The column of the specified index key is not indexed. Operation: %s
```

### `DB-CORE-10002`

**Message**

```markdown
The index key is not properly specified. Operation: %s
```

### `DB-CORE-10003`

**Message**

```markdown
Clustering keys cannot be specified when using an index. Operation: %s
```

### `DB-CORE-10004`

**Message**

```markdown
Orderings cannot be specified when using an index. Operation: %s
```

### `DB-CORE-10005`

**Message**

```markdown
The limit cannot be negative. Operation: %s
```

### `DB-CORE-10006`

**Message**

```markdown
Cross-partition scan is not enabled. Operation: %s
```

### `DB-CORE-10007`

**Message**

```markdown
Cross-partition scan ordering is not enabled. Operation: %s
```

### `DB-CORE-10008`

**Message**

```markdown
Cross-partition scan filtering is not enabled. Operation: %s
```

### `DB-CORE-10009`

**Message**

```markdown
The specified projection is not found. Projection: %s, Operation: %s
```

### `DB-CORE-10010`

**Message**

```markdown
The clustering key boundary is not properly specified. Operation: %s
```

### `DB-CORE-10011`

**Message**

```markdown
The start clustering key is not properly specified. Operation: %s
```

### `DB-CORE-10012`

**Message**

```markdown
The end clustering key is not properly specified. Operation: %s
```

### `DB-CORE-10013`

**Message**

```markdown
Orderings are not properly specified. Operation: %s
```

### `DB-CORE-10014`

**Message**

```markdown
The specified ordering column is not found. Ordering: %s, Operation: %s
```

### `DB-CORE-10015`

**Message**

```markdown
The condition is not properly specified. Operation: %s
```

### `DB-CORE-10016`

**Message**

```markdown
The table does not exist. Table: %s
```

### `DB-CORE-10017`

**Message**

```markdown
The column value is not properly specified. Column: %s, Operation: %s
```

### `DB-CORE-10018`

**Message**

```markdown
The mutations are empty
```

### `DB-CORE-10019`

**Message**

```markdown
Mutations that span multiple partitions are not supported. Mutations: %s
```

### `DB-CORE-10020`

**Message**

```markdown
The partition key is not properly specified. Operation: %s
```

### `DB-CORE-10021`

**Message**

```markdown
The clustering key is not properly specified. Operation: %s
```

### `DB-CORE-10022`

**Message**

```markdown
The authentication and authorization feature is not enabled. To use this feature, you must enable it. Note that this feature is supported only in the ScalarDB Enterprise edition
```

### `DB-CORE-10023`

**Message**

```markdown
This condition is not allowed for the PutIf operation. Condition: %s
```

### `DB-CORE-10024`

**Message**

```markdown
This condition is not allowed for the DeleteIf operation. Condition: %s
```

### `DB-CORE-10025`

**Message**

```markdown
Operator must be LIKE or NOT_LIKE. Operator: %s
```

### `DB-CORE-10026`

**Message**

```markdown
An escape character must be a string of a single character or an empty string
```

### `DB-CORE-10027`

**Message**

```markdown
The LIKE pattern must not be null
```

### `DB-CORE-10028`

**Message**

```markdown
The LIKE pattern must not include only an escape character
```

### `DB-CORE-10029`

**Message**

```markdown
The LIKE pattern must not end with an escape character
```

### `DB-CORE-10030`

**Message**

```markdown
The column %s does not exist
```

### `DB-CORE-10031`

**Message**

```markdown
This operation is not supported when getting records of a database without using an index
```

### `DB-CORE-10032`

**Message**

```markdown
This operation is not supported when getting records of a database by using an index
```

### `DB-CORE-10033`

**Message**

```markdown
This operation is not supported when scanning all the records of a database or scanning records of a database by using an index
```

### `DB-CORE-10034`

**Message**

```markdown
This operation is supported only when scanning records of a database by using an index
```

### `DB-CORE-10035`

**Message**

```markdown
This operation is not supported when scanning records of a database by using an index
```

### `DB-CORE-10037`

**Message**

```markdown
This operation is supported only when no conditions are specified. If you want to modify a condition, please use clearConditions() to remove all existing conditions first
```

### `DB-CORE-10038`

**Message**

```markdown
One or more columns must be specified.
```

### `DB-CORE-10039`

**Message**

```markdown
One or more partition keys must be specified.
```

### `DB-CORE-10040`

**Message**

```markdown
The column definition must be specified since %s is specified as a partition key
```

### `DB-CORE-10041`

**Message**

```markdown
The column definition must be specified since %s is specified as a clustering key
```

### `DB-CORE-10042`

**Message**

```markdown
Invalid ID specified. ID: %d
```

### `DB-CORE-10043`

**Message**

```markdown
The transaction is not active. Status: %s
```

### `DB-CORE-10044`

**Message**

```markdown
The transaction has already been committed or rolled back. Status: %s
```

### `DB-CORE-10045`

**Message**

```markdown
The transaction has not been prepared. Status: %s
```

### `DB-CORE-10046`

**Message**

```markdown
The transaction has not been prepared or validated. Status: %s
```

### `DB-CORE-10047`

**Message**

```markdown
The transaction already exists
```

### `DB-CORE-10048`

**Message**

```markdown
A transaction associated with the specified transaction ID is not found. The transaction might have expired
```

### `DB-CORE-10049`

**Message**

```markdown
%s is the system namespace name
```

### `DB-CORE-10050`

**Message**

```markdown
The namespace already exists. Namespace: %s
```

### `DB-CORE-10051`

**Message**

```markdown
The namespace does not exist. Namespace: %s
```

### `DB-CORE-10052`

**Message**

```markdown
The table already exists. Table: %s
```

### `DB-CORE-10053`

**Message**

```markdown
The namespace is not empty. Namespace: %s; Tables in the namespace: %s
```

### `DB-CORE-10054`

**Message**

```markdown
The column does not exist. Table: %s; Column: %s
```

### `DB-CORE-10055`

**Message**

```markdown
The index already exists. Table: %s; Column: %s
```

### `DB-CORE-10056`

**Message**

```markdown
The index does not exist. Table: %s; Column: %s
```

### `DB-CORE-10057`

**Message**

```markdown
The column already exists. Table: %s; Column: %s
```

### `DB-CORE-10058`

**Message**

```markdown
The operation does not have the target namespace or table name. Operation: %s
```

### `DB-CORE-10059`

**Message**

```markdown
The specified value of the property '%s' is not a number. Value: %s
```

### `DB-CORE-10060`

**Message**

```markdown
The specified value of the property '%s' is not a boolean. Value: %s
```

### `DB-CORE-10061`

**Message**

```markdown
Reading the file failed. File: %s
```

### `DB-CORE-10062`

**Message**

```markdown
The property 'scalar.db.cross_partition_scan.enabled' must be set to true to use cross-partition scan with filtering or ordering
```

### `DB-CORE-10063`

**Message**

```markdown
This column value is out of range for BigInt. Value: %s
```

### `DB-CORE-10064`

**Message**

```markdown
This type is not supported. Name: %s, Type: %s
```

### `DB-CORE-10065`

**Message**

```markdown
Storage '%s' is not found
```

### `DB-CORE-10066`

**Message**

```markdown
Transaction manager '%s' is not found
```

### `DB-CORE-10068`

**Message**

```markdown
Please use scan() for non-exact match selection. Operation: %s
```

### `DB-CORE-10069`

**Message**

```markdown
Import-related functionality is not supported in Cassandra
```

### `DB-CORE-10070`

**Message**

```markdown
The %s network strategy does not exist
```

### `DB-CORE-10071`

**Message**

```markdown
The property 'scalar.db.contact_port' must be greater than or equal to zero
```

### `DB-CORE-10073`

**Message**

```markdown
The BLOB type is not supported for clustering keys in Cosmos DB. Column: %s
```

### `DB-CORE-10074`

**Message**

```markdown
Import-related functionality is not supported in Cosmos DB
```

### `DB-CORE-10075`

**Message**

```markdown
The property 'scalar.db.contact_points' must not be empty
```

### `DB-CORE-10076`

**Message**

```markdown
Cosmos DB supports only EQ, NE, IS_NULL, and IS_NOT_NULL operations for the BLOB type in conditions. Mutation: %s
```

### `DB-CORE-10077`

**Message**

```markdown
The specified consistency level is not supported. Consistency level: %s
```

### `DB-CORE-10078`

**Message**

```markdown
0x00 bytes are not accepted in BLOB values in DESC order
```

### `DB-CORE-10079`

**Message**

```markdown
Cannot encode a Text value that contains '\u0000'
```

### `DB-CORE-10081`

**Message**

```markdown
An index column cannot be set to null or an empty value for Text or Blob in DynamoDB. Operation: %s
```

### `DB-CORE-10082`

**Message**

```markdown
DynamoDB supports only EQ, NE, IS_NULL, and IS_NOT_NULL operations for the BOOLEAN type in conditions. Mutation: %s
```

### `DB-CORE-10083`

**Message**

```markdown
Nested multi-storage definitions are not supported. Storage: %s
```

### `DB-CORE-10084`

**Message**

```markdown
Storage not found. Storage: %s
```

### `DB-CORE-10085`

**Message**

```markdown
The namespace name is not acceptable. Namespace: %s
```

### `DB-CORE-10086`

**Message**

```markdown
The table name is not acceptable. Table: %s
```

### `DB-CORE-10087`

**Message**

```markdown
Importing tables is not allowed in the RDB engine. RDB engine: %s
```

### `DB-CORE-10088`

**Message**

```markdown
The %s table must have a primary key
```

### `DB-CORE-10089`

**Message**

```markdown
The RDB engine is not supported. JDBC connection URL: %s
```

### `DB-CORE-10090`

**Message**

```markdown
Data type %s(%d) is not supported: %s
```

### `DB-CORE-10091`

**Message**

```markdown
Data type %s is not supported: %s
```

### `DB-CORE-10092`

**Message**

```markdown
Getting a transaction state is not supported in JDBC transactions
```

### `DB-CORE-10093`

**Message**

```markdown
Rolling back a transaction is not supported in JDBC transactions
```

### `DB-CORE-10094`

**Message**

```markdown
Coordinator tables already exist
```

### `DB-CORE-10095`

**Message**

```markdown
Coordinator tables do not exist
```

### `DB-CORE-10096`

**Message**

```markdown
The namespace %s is reserved. Any operations on this namespace are not allowed
```

### `DB-CORE-10097`

**Message**

```markdown
Mutating transaction metadata columns is not allowed. Table: %s; Column: %s
```

### `DB-CORE-10098`

**Message**

```markdown
A %s condition is not allowed on Put operations
```

### `DB-CORE-10099`

**Message**

```markdown
A %s condition is not allowed on Delete operations
```

### `DB-CORE-10100`

**Message**

```markdown
The condition is not allowed to target transaction metadata columns. Column: %s
```

### `DB-CORE-10101`

**Message**

```markdown
The column '%s' is reserved as transaction metadata
```

### `DB-CORE-10102`

**Message**

```markdown
Non-primary key columns with the 'before_' prefix, '%s', are reserved as transaction metadata
```

### `DB-CORE-10103`

**Message**

```markdown
Put cannot have a condition when the target record is unread and implicit pre-read is disabled. Please read the target record beforehand or enable implicit pre-read: %s
```

### `DB-CORE-10104`

**Message**

```markdown
Writing already-deleted data is not allowed
```

### `DB-CORE-10105`

**Message**

```markdown
Getting data neither in the read set nor the delete set is not allowed
```

### `DB-CORE-10106`

**Message**

```markdown
Reading already-written data is not allowed
```

### `DB-CORE-10107`

**Message**

```markdown
The transaction is not validated. When using the EXTRA_READ serializable strategy, you need to call validate() before calling commit()
```

### `DB-CORE-10108`

**Message**

```markdown
DynamoDB cannot batch more than 100 mutations at once
```

### `DB-CORE-10109`

**Message**

```markdown
The partition keys of the table %s.%s were modified, but altering partition keys is not supported
```

### `DB-CORE-10110`

**Message**

```markdown
The clustering keys of the table %s.%s were modified, but altering clustering keys is not supported
```

### `DB-CORE-10111`

**Message**

```markdown
The clustering ordering of the table %s.%s were modified, but altering clustering ordering is not supported
```

### `DB-CORE-10112`

**Message**

```markdown
The column %s of the table %s.%s has been deleted. Column deletion is not supported when altering a table
```

### `DB-CORE-10113`

**Message**

```markdown
The data type of the column %s of the table %s.%s was modified, but altering data types is not supported
```

### `DB-CORE-10114`

**Message**

```markdown
Specifying the '--schema-file' option is required when using the '--repair-all' option
```

### `DB-CORE-10115`

**Message**

```markdown
Specifying the '--schema-file' option is required when using the '--alter' option
```

### `DB-CORE-10116`

**Message**

```markdown
Specifying the '--schema-file' option is required when using the '--import' option
```

### `DB-CORE-10117`

**Message**

```markdown
Specifying the '--coordinator' option with the '--import' option is not allowed. Create Coordinator tables separately
```

### `DB-CORE-10118`

**Message**

```markdown
Reading the configuration file failed. File: %s
```

### `DB-CORE-10119`

**Message**

```markdown
Reading the schema file failed. File: %s
```

### `DB-CORE-10120`

**Message**

```markdown
Parsing the schema JSON failed. Details: %s
```

### `DB-CORE-10121`

**Message**

```markdown
The table name must contain the namespace and the table. Table: %s
```

### `DB-CORE-10122`

**Message**

```markdown
The partition key must be specified. Table: %s
```

### `DB-CORE-10123`

**Message**

```markdown
Invalid clustering-key format. The clustering key must be in the format of 'column_name' or 'column_name ASC/DESC'. Table: %s; Clustering key: %s
```

### `DB-CORE-10124`

**Message**

```markdown
Columns must be specified. Table: %s
```

### `DB-CORE-10125`

**Message**

```markdown
Invalid column type. Table: %s; Column: %s; Type: %s
```

### `DB-CORE-10126`

**Message**

```markdown
The mutation type is not supported. Only the Put or Delete type is supported. Mutation: %s
```

### `DB-CORE-10127`

**Message**

```markdown
This condition is not allowed for the UpdateIf operation. Condition: %s
```

### `DB-CORE-10128`

**Message**

```markdown
Cross-partition scan with ordering is not supported in Cassandra
```

### `DB-CORE-10129`

**Message**

```markdown
Cross-partition scan with ordering is not supported in Cosmos DB
```

### `DB-CORE-10130`

**Message**

```markdown
Cross-partition scan with ordering is not supported in DynamoDB
```

### `DB-CORE-10131`

**Message**

```markdown
The directory '%s' does not have write permissions. Please ensure that the current user has write access to the directory.
```

### `DB-CORE-10132`

**Message**

```markdown
Failed to create the directory '%s'. Please check if you have sufficient permissions and if there are any file system restrictions. Details: %s
```

### `DB-CORE-10133`

**Message**

```markdown
Directory path cannot be null or empty.
```

### `DB-CORE-10134`

**Message**

```markdown
No file extension was found on the provided file name %s.
```

### `DB-CORE-10135`

**Message**

```markdown
Invalid file extension: %s. Allowed extensions are: %s
```

### `DB-CORE-10136`

**Message**

```markdown
Getting a transaction state is not supported in single CRUD operation transactions
```

### `DB-CORE-10137`

**Message**

```markdown
Rolling back a transaction is not supported in single CRUD operation transactions
```

### `DB-CORE-10138`

**Message**

```markdown
Multiple mutations are not supported in single CRUD operation transactions
```

### `DB-CORE-10139`

**Message**

```markdown
Beginning a transaction is not allowed in single CRUD operation transactions
```

### `DB-CORE-10140`

**Message**

```markdown
Resuming a transaction is not allowed in single CRUD operation transactions
```

### `DB-CORE-10141`

**Message**

```markdown
Using the group commit feature on the Coordinator table with a two-phase commit interface is not allowed
```

### `DB-CORE-10142`

**Message**

```markdown
This operation is supported only when no conditions are specified. If you want to modify a condition, please use clearConditions() to remove all existing conditions first
```

### `DB-CORE-10143`

**Message**

```markdown
The encryption feature is not enabled. To encrypt data at rest, you must enable this feature. Note that this feature is supported only in the ScalarDB Enterprise edition
```

### `DB-CORE-10144`

**Message**

```markdown
The variable key column size must be greater than or equal to 64
```

### `DB-CORE-10145`

**Message**

```markdown
The value of the column %s in the primary key contains an illegal character. Primary-key columns must not contain any of the following characters in Cosmos DB: ':', '/', '\', '#', '?'. Value: %s
```

### `DB-CORE-10146`

**Message**

```markdown
Inserting already-written data is not allowed
```

### `DB-CORE-10147`

**Message**

```markdown
Deleting already-inserted data is not allowed
```

### `DB-CORE-10148`

**Message**

```markdown
Invalid key: Column %s does not exist in the table %s in namespace %s.
```

### `DB-CORE-10149`

**Message**

```markdown
Invalid base64 encoding for blob value for column %s in table %s in namespace %s
```

### `DB-CORE-10150`

**Message**

```markdown
Invalid number specified for column %s in table %s in namespace %s
```

### `DB-CORE-10151`

**Message**

```markdown
Method null argument not allowed
```

### `DB-CORE-10152`

**Message**

```markdown
The attribute-based access control feature is not enabled. To use this feature, you must enable it. Note that this feature is supported only in the ScalarDB Enterprise edition
```

### `DB-CORE-10153`

**Message**

```markdown
The provided clustering key %s was not found
```

### `DB-CORE-10154`

**Message**

```markdown
The column '%s' was not found
```

### `DB-CORE-10155`

**Message**

```markdown
The provided partition key is incomplete. Required key: %s
```

### `DB-CORE-10156`

**Message**

```markdown
The provided clustering key order does not match the table schema. Required order: %s
```

### `DB-CORE-10157`

**Message**

```markdown
The provided partition key order does not match the table schema. Required order: %s
```

### `DB-CORE-10158`

**Message**

```markdown
This DATE column value is out of the valid range. It must be between 1000-01-01 and 9999-12-12. Value: %s
```

### `DB-CORE-10159`

**Message**

```markdown
This TIME column value precision cannot be shorter than one microsecond. Value: %s
```

### `DB-CORE-10160`

**Message**

```markdown
This TIMESTAMP column value is out of the valid range. It must be between 1000-01-01T00:00:00.000 and 9999-12-31T23:59:59.999. Value: %s
```

### `DB-CORE-10161`

**Message**

```markdown
This TIMESTAMP column value precision cannot be shorter than one millisecond. Value: %s
```

### `DB-CORE-10162`

**Message**

```markdown
This TIMESTAMPTZ column value is out of the valid range. It must be between 1000-01-01T00:00:00.000Z to 9999-12-31T23:59:59.999Z. Value: %s
```

### `DB-CORE-10163`

**Message**

```markdown
This TIMESTAMPTZ column value precision cannot be shorter than one millisecond. Value: %s
```

### `DB-CORE-10164`

**Message**

```markdown
The underlying-storage data type %s is not supported as the ScalarDB %s data type: %s
```

### `DB-CORE-10165`

**Message**

```markdown
Missing namespace or table: %s, %s
```

### `DB-CORE-10166`

**Message**

```markdown
Failed to retrieve table metadata. Details: %s
```

### `DB-CORE-10167`

**Message**

```markdown
Duplicate data mappings found for table '%s' in the control file
```

### `DB-CORE-10168`

**Message**

```markdown
No mapping found for column '%s' in table '%s' in the control file. Control file validation set at 'FULL'. All columns need to be mapped.
```

### `DB-CORE-10169`

**Message**

```markdown
The control file is missing data mappings
```

### `DB-CORE-10170`

**Message**

```markdown
The target column '%s' for source field '%s' could not be found in table '%s'
```

### `DB-CORE-10171`

**Message**

```markdown
The required partition key '%s' is missing in the control file mapping for table '%s'
```

### `DB-CORE-10172`

**Message**

```markdown
The required clustering key '%s' is missing in the control file mapping for table '%s'
```

### `DB-CORE-10173`

**Message**

```markdown
Duplicated data mappings found for column '%s' in table '%s'
```

### `DB-CORE-10174`

**Message**

```markdown
Missing required field or column mapping for clustering key %s
```

### `DB-CORE-10175`

**Message**

```markdown
Missing required field or column mapping for partition key %s
```

### `DB-CORE-10176`

**Message**

```markdown
Missing field or column mapping for %s
```

### `DB-CORE-10177`

**Message**

```markdown
Something went wrong while converting the ScalarDB values to strings. The table metadata and Value datatype probably do not match. Details: %s
```

### `DB-CORE-10178`

**Message**

```markdown
The provided file format is not supported: %s
```

### `DB-CORE-10179`

**Message**

```markdown
Could not find the partition key
```

### `DB-CORE-10180`

**Message**

```markdown
The source record needs to contain all fields if the UPSERT turns into an INSERT
```

### `DB-CORE-10181`

**Message**

```markdown
Record already exists
```

### `DB-CORE-10182`

**Message**

```markdown
Record was not found
```

### `DB-CORE-10183`

**Message**

```markdown
Could not find the clustering key
```

### `DB-CORE-10184`

**Message**

```markdown
No table metadata found
```

### `DB-CORE-10185`

**Message**

```markdown
The data mapping source field '%s' for table '%s' is missing in the JSON data record
```

### `DB-CORE-10186`

**Message**

```markdown
The CSV row: %s does not match header: %s.
```

### `DB-CORE-10187`

**Message**

```markdown
Expected JSON file content to be an array
```

### `DB-CORE-10189`

**Message**

```markdown
Missing option: either '--namespace' and '--table' or '--control-file' options must be specified.
```

### `DB-CORE-10190`

**Message**

```markdown
The file '%s' specified by the argument '%s' does not exist.
```

### `DB-CORE-10191`

**Message**

```markdown
Cannot write to the log directory: %s
```

### `DB-CORE-10192`

**Message**

```markdown
Failed to create the log directory: %s
```

### `DB-CORE-10193`

**Message**

```markdown
Failed to parse the control file: %s
```

### `DB-CORE-10194`

**Message**

```markdown
No permission to create or write files in the directory: %s
```

### `DB-CORE-10195`

**Message**

```markdown
Failed to create the directory: %s
```

### `DB-CORE-10196`

**Message**

```markdown
Path exists but is not a directory: %s
```

### `DB-CORE-10197`

**Message**

```markdown
File path must not be blank.
```

### `DB-CORE-10198`

**Message**

```markdown
File not found: %s
```

### `DB-CORE-10199`

**Message**

```markdown
Invalid date/time value specified for column %s in table %s in namespace %s.
```

### `DB-CORE-10200`

**Message**

```markdown
Key-value cannot be null or empty
```

### `DB-CORE-10201`

**Message**

```markdown
Invalid key-value format: %s
```

### `DB-CORE-10202`

**Message**

```markdown
Value must not be null
```

### `DB-CORE-10203`

**Message**

```markdown
Delimiter must not be null
```

### `DB-CORE-10204`

**Message**

```markdown
Config file path must not be blank
```

### `DB-CORE-10205`

**Message**

```markdown
The namespace has non-ScalarDB tables and cannot be dropped. Namespace: %s; Tables in the namespace: %s
```

## `DB-CORE-2xxxx` status codes

The following are status codes and messages for the concurrency error category.

### `DB-CORE-20000`

**Message**

```markdown
No mutation was applied
```

### `DB-CORE-20001`

**Message**

```markdown
Logging failed in the batch
```

### `DB-CORE-20002`

**Message**

```markdown
The operation failed in the batch with type %s
```

### `DB-CORE-20003`

**Message**

```markdown
An error occurred in the batch. Details: %s
```

### `DB-CORE-20004`

**Message**

```markdown
A Paxos phase in the CAS operation failed
```

### `DB-CORE-20005`

**Message**

```markdown
The learn phase in the CAS operation failed
```

### `DB-CORE-20006`

**Message**

```markdown
A simple write operation failed
```

### `DB-CORE-20007`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `DB-CORE-20008`

**Message**

```markdown
A RetryWith error occurred in the mutation. Details: %s
```

### `DB-CORE-20009`

**Message**

```markdown
A transaction conflict occurred in the mutation. Details: %s
```

### `DB-CORE-20010`

**Message**

```markdown
A transaction conflict occurred in the mutation. Details: %s
```

### `DB-CORE-20011`

**Message**

```markdown
A conflict occurred. Please try restarting the transaction. Details: %s
```

### `DB-CORE-20012`

**Message**

```markdown
The %s condition of the %s operation is not satisfied. Targeting column(s): %s
```

### `DB-CORE-20013`

**Message**

```markdown
The record being prepared already exists
```

### `DB-CORE-20014`

**Message**

```markdown
A conflict occurred when preparing records
```

### `DB-CORE-20015`

**Message**

```markdown
The committing state in the coordinator failed. The transaction has been aborted
```

### `DB-CORE-20016`

**Message**

```markdown
A conflict occurred during implicit pre-read
```

### `DB-CORE-20017`

**Message**

```markdown
This record needs to be recovered
```

### `DB-CORE-20018`

**Message**

```markdown
The record does not exist, so the %s condition is not satisfied
```

### `DB-CORE-20019`

**Message**

```markdown
The record exists, so the %s condition is not satisfied
```

### `DB-CORE-20020`

**Message**

```markdown
The condition on the column '%s' is not satisfied
```

### `DB-CORE-20021`

**Message**

```markdown
Reading empty records might cause a write skew anomaly, so the transaction has been aborted for safety purposes
```

### `DB-CORE-20022`

**Message**

```markdown
An anti-dependency was found. The transaction has been aborted
```

### `DB-CORE-20023`

**Message**

```markdown
A transaction conflict occurred in the Insert operation
```

### `DB-CORE-20024`

**Message**

```markdown
The %s condition of the %s operation is not satisfied. Targeting column(s): %s
```

### `DB-CORE-20025`

**Message**

```markdown
A transaction conflict occurred in the Insert operation
```

## `DB-CORE-3xxxx` status codes

The following are status codes and messages for the internal error category.

### `DB-CORE-30000`

**Message**

```markdown
Creating the namespace failed. Namespace: %s
```

### `DB-CORE-30001`

**Message**

```markdown
Dropping the namespace failed. Namespace: %s
```

### `DB-CORE-30002`

**Message**

```markdown
Creating the table failed. Table: %s
```

### `DB-CORE-30003`

**Message**

```markdown
Dropping the table failed. Table: %s
```

### `DB-CORE-30004`

**Message**

```markdown
Truncating the table failed. Table: %s
```

### `DB-CORE-30005`

**Message**

```markdown
Creating the index failed. Table: %s, Column: %s
```

### `DB-CORE-30006`

**Message**

```markdown
Dropping the index failed. Table: %s, Column: %s
```

### `DB-CORE-30007`

**Message**

```markdown
Getting the table metadata failed. Table: %s
```

### `DB-CORE-30008`

**Message**

```markdown
Getting the table names in the namespace failed. Namespace: %s
```

### `DB-CORE-30009`

**Message**

```markdown
Checking the namespace existence failed. Namespace: %s
```

### `DB-CORE-30010`

**Message**

```markdown
Checking the table existence failed. Table: %s
```

### `DB-CORE-30011`

**Message**

```markdown
Checking the index existence failed. Table: %s; Column: %s
```

### `DB-CORE-30012`

**Message**

```markdown
Repairing the namespace failed. Namespace: %s
```

### `DB-CORE-30013`

**Message**

```markdown
Repairing the table failed. Table: %s
```

### `DB-CORE-30014`

**Message**

```markdown
Adding a new column to the table failed. Table: %s; Column: %s; ColumnType: %s
```

### `DB-CORE-30015`

**Message**

```markdown
Getting the namespace names failed
```

### `DB-CORE-30016`

**Message**

```markdown
Getting the table metadata of the table being imported failed. Table: %s
```

### `DB-CORE-30017`

**Message**

```markdown
Importing the table failed. Table: %s
```

### `DB-CORE-30018`

**Message**

```markdown
Adding the raw column to the table failed. Table: %s; Column: %s; ColumnType: %s
```

### `DB-CORE-30019`

**Message**

```markdown
Upgrading the ScalarDB environment failed
```

### `DB-CORE-30020`

**Message**

```markdown
Something wrong because WriteType is neither CAS nor SIMPLE
```

### `DB-CORE-30021`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `DB-CORE-30022`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `DB-CORE-30023`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `DB-CORE-30024`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `DB-CORE-30025`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `DB-CORE-30026`

**Message**

```markdown
An error occurred in the mutation. Details: %s
```

### `DB-CORE-30027`

**Message**

```markdown
An error occurred in the selection. Details: %s
```

### `DB-CORE-30028`

**Message**

```markdown
Fetching the next result failed
```

### `DB-CORE-30029`

**Message**

```markdown
Rolling back the transaction failed. Details: %s
```

### `DB-CORE-30030`

**Message**

```markdown
Committing the transaction failed. Details: %s
```

### `DB-CORE-30031`

**Message**

```markdown
The Get operation failed. Details: %s
```

### `DB-CORE-30032`

**Message**

```markdown
The Scan operation failed. Details: %s
```

### `DB-CORE-30033`

**Message**

```markdown
The Put operation failed. Details: %s
```

### `DB-CORE-30034`

**Message**

```markdown
The Delete operation failed. Details: %s
```

### `DB-CORE-30035`

**Message**

```markdown
Beginning a transaction failed. Details: %s
```

### `DB-CORE-30036`

**Message**

```markdown
Preparing records failed
```

### `DB-CORE-30037`

**Message**

```markdown
Validation failed
```

### `DB-CORE-30038`

**Message**

```markdown
Executing implicit pre-read failed
```

### `DB-CORE-30039`

**Message**

```markdown
Reading a record from the underlying storage failed
```

### `DB-CORE-30040`

**Message**

```markdown
Scanning records from the underlying storage failed
```

### `DB-CORE-30041`

**Message**

```markdown
Rollback failed because the transaction has already been committed
```

### `DB-CORE-30042`

**Message**

```markdown
Rollback failed
```

### `DB-CORE-30043`

**Message**

```markdown
The Insert operation failed. Details: %s
```

### `DB-CORE-30044`

**Message**

```markdown
The Upsert operation failed. Details: %s
```

### `DB-CORE-30045`

**Message**

```markdown
The Update operation failed. Details: %s
```

### `DB-CORE-30046`

**Message**

```markdown
Handling the before-preparation snapshot hook failed. Details: %s
```

### `DB-CORE-30047`

**Message**

```markdown
Something went wrong while trying to save the data. Details: %s
```

### `DB-CORE-30048`

**Message**

```markdown
Something went wrong while scanning. Are you sure you are running in the correct transaction mode? Details: %s
```

### `DB-CORE-30049`

**Message**

```markdown
Failed to read CSV file. Details: %s.
```

### `DB-CORE-30050`

**Message**

```markdown
Failed to read CSV header line. Details: %s.
```

### `DB-CORE-30051`

**Message**

```markdown
Data chunk processing was interrupted. Details: %s
```

### `DB-CORE-30052`

**Message**

```markdown
Failed to read JSON file. Details: %s.
```

### `DB-CORE-30053`

**Message**

```markdown
Failed to read JSON Lines file. Details: %s.
```

## `DB-CORE-4xxxx` status codes

The following are status codes and messages for the unknown transaction status error category.

### `DB-CORE-40000`

**Message**

```markdown
Rolling back the transaction failed. Details: %s
```

### `DB-CORE-40001`

**Message**

```markdown
Committing state failed with NoMutationException, but the coordinator status does not exist
```

### `DB-CORE-40002`

**Message**

```markdown
The state cannot be retrieved
```

### `DB-CORE-40003`

**Message**

```markdown
The coordinator status is unknown
```

### `DB-CORE-40004`

**Message**

```markdown
Aborting state failed with NoMutationException, but the coordinator status does not exist
```
